k8s/local/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-app
spec:
  template:
    spec:
      containers:
        - name: cloud-app
          image: cloud-app:local
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 384Mi
